--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My RSSReader</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">0wsrKHGpMHf39sRaG3ZOH5Ylby48HEzAMBRf3</string>
 </resources>
